
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 DEC 04a
  * in model/fluid/_Favre-Reynolds_Tv/fluid_conv.c
    - added eigenset1
  * in model/fluid/_Favre-Reynolds_plasma/fluid_conv.c
    - added eigenset1
  * in cycle/resconv/_MUSCL/resconv.c
    - in read_disc_resconv_actions(), when gl->cycle.resconv.FLUX==FLUX_FDSR
      now sets gl->cycle.resconv.CONVJACOBIAN=CONVJACOBIAN_FDSR
  * in cycle/share/ts_share.c
    - added find_Aabs_restrained_from_jacvars()
    - added find_dFstar_dUstar_FDSR_interface()
    - in add_dFstar_dUstar_to_TDMA(), added call to find_dFstar_dUstar_FDSR_interface()
    - in find_TDMA_jacobians_conservative(), added call to find_dFstar_dUstar_FDSR_interface()
    

2023 DEC 03a
  * in cycle/resconv/_MUSCL/resconv.c
    - added FLUX_FDSR flux
  * in cycle/share/res_share.c
    - added find_Fstar_interface_FDSR_muscl()
    - in find_Fstar_interface_FDS_muscl_without_CDF() added calls to find_L_restrained_from_jacvars
      and find_Linv_restrained_from_jacvars
    - in find_Fstar_interface_FDS_muscl_with_CDF() added calls to find_L_restrained_from_jacvars
      and find_Linv_restrained_from_jacvars
  * in model/share/fluid_share.c
    - added find_L_restrained_from_jacvars()
    - added find_Linv_restrained_from_jacvars()


2023 DEC 01a
  * in tools/chemkin2cfdwarp.c
    - fixed a bug which prevented the last chemkin reaction from being read 
  * in tools/obliqueshock.c
    - added Pstag2/Pstag1 as an additional output
    

2023 NOV 30b
  * renamed
    - timelevelcnt to timelevel
    

2023 NOV 30a
  * in model/chem/_NH3_Plasma_10s/omprakas2023.c
    - changed the rates for reaction 2
    - set all Qei terms to 0
  * in model/fluid/_Favre-Reynolds_plasma/fluid_source.c and model/fluid/_Favre-Reynolds_plasma/fluid.c