@@ -62,12 +62,12 @@ void find_dW_dx ( np_t np, gl_t *gl, spec_t rhok, double T, double Te, double Tv
 
 
 
-void find_Qei(gl_t *gl, spec_t rhok, double Estar, double Te, double *Qei){  
+void find_Qei(np_t np, gl_t *gl, spec_t rhok, double Estar, double Te, double *Qei){  
   *Qei=0.0;
 }
 
 
-void find_dQei_dx(gl_t *gl, spec_t rhok, double Estar, double Te, spec_t dQeidrhok, double *dQeidTe){
+void find_dQei_dx(np_t np, gl_t *gl, spec_t rhok, double Estar, double Te, spec_t dQeidrhok, double *dQeidTe){
   long spec;
   
   for (spec=0; spec<ns; spec++) dQeidrhok[spec]=0.0;
